Updated SEO and improved accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
-
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-
-    <meta name="description" content="Portfolio of Alex Goater" />
-
-    <title>Alex Goater</title>
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<html lang="en-GB">
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="theme-color" content="#000000" />
+      <title>Alex Goater | Portfolio</title>
+      <meta name="description" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design." />
+      <meta name="keywords" content="Alex Goater, Full Stack Developer, React, JavaScript, Web Design, Portfolio" />
+      <meta name="robots" content="index, follow" />
+      <meta name="author" content="Alex Goater" />
+      <meta property="og:title" content="Alex Goater | Portfolio" />
+      <meta property="og:description" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design." />
+      <meta property="og:image" content="https://goataria.co.uk/og-image.png" />
+      <meta property="og:image:width" content="1200" />
+      <meta property="og:image:height" content="630" />
+      <meta property="og:image:alt" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design." />
+      <meta property="og:url" content="https://goataria.co.uk" />
+      <meta property="og:type" content="website" />
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="Alex Goater | Portfolio" />
+      <meta name="twitter:description" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design." />
+      <meta name="twitter:image" content="https://goataria.co.uk/og-image.png" />
+      <meta name="twitter:image:alt" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design." />
+      <link rel="canonical" href="https://goataria.co.uk" />
+      <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+      <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+      <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+      <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+      <!-- PWA manifest -->
+      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+      <script type="application/ld+json">
+         {
+           "@context": "https://schema.org",
+           "@type": "Person",
+           "name": "Alex Goater",
+           "url": "https://goataria.co.uk",
+           "jobTitle": "Full Stack Developer",
+           "knowsAbout": ["React", "JavaScript", "Web Design"],
+           "address": {
+             "@type": "PostalAddress",
+             "addressLocality": "Eastbourne",
+             "addressCountry": "GB"
+           },
+           "description": "Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design.",
+           "sameAs": [
+             "https://github.com/Alex-Goater-02",
+             "https://www.linkedin.com/in/alex-goater-433933232/"
+           ]
+         }
+      </script>
+   </head>
+   <body>
+      <noscript>
+         This site requires JavaScript to display Alex Goater’s portfolio. Please enable JavaScript in your browser.
+      </noscript>
+      <div id="root"></div>
+   </body>
 </html>
