--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <title>Alex Goater | Portfolio</title>
-      <meta name="description" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design." />
+      <title>Alex Goater | Full Stack Developer Portfolio</title>
+      <meta name="description" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design. Projects include frontend, backend, and full stack web apps." />
       <meta name="keywords" content="Alex Goater, Full Stack Developer, React, JavaScript, Web Design, Portfolio" />
       <meta name="robots" content="index, follow" />
       <meta name="author" content="Alex Goater" />
