Cache Favicon Issues - Fix

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,10 @@
       <meta name="twitter:image" content="https://goataria.co.uk/og-image.png" />
       <meta name="twitter:image:alt" content="Portfolio of Alex Goater, full stack developer specialising in React, JavaScript, and modern web design." />
       <link rel="canonical" href="https://goataria.co.uk" />
-      <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
-      <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
-      <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
-      <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-      <!-- PWA manifest -->
+      <link rel="icon" href="%PUBLIC_URL%/favicon.svg?v=2" type="image/svg+xml" />
+      <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v=2" />
+      <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v=2" />
+      <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v=2" />
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
       <script type="application/ld+json">
          {
